Fixed spacing issue and panel display issue on workflow instances. Changed arrow direction on expanded panels. (#4145)

--- a/src/designer/designer_packages/elsa-workflows-designer/src/modules/workflow-instances/components/viewer.scss
+++ b/src/designer/designer_packages/elsa-workflows-designer/src/modules/workflow-instances/components/viewer.scss
@@ -3,6 +3,11 @@
   --activity-picker-width: 300px;
   --activity-editor-height: 200px;
 }
+
+.x6-graph-scroller {
+  height: calc(100vh - var(--activity-editor-height) - 64px) !important;
+}
+
 elsa-flowchart {
   position: absolute;
   left: var(--activity-picker-width);
